apps/staging/netbootxyz/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbootxyz
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
  hostnames:
    - netboot.staging.myrobertson.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbootxyz
          port: 3000
